# ethoko-monorepo

./: .gitignore  .gitmodules  AGENTS.md  CLI_PRD.md  CONTEXT-MAP.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: beige-tips-check.md  breezy-humans-stand.md  chubby-oranges-throw.md  cozy-readers-sleep.md  cute-rabbits-do.md  early-cougars-camp.md  every-jars-cover.md  fluffy-news-love.md  four-cases-slide.md  frank-bees-cheat.md  free-areas-decide.md  great-towns-cut.md  happy-icons-wave.md  hip-hornets-flow.md  huge-deer-post.md  inspect-json-canonical-origin.md  itchy-islands-talk.md  itchy-trams-pick.md  kind-apes-call.md  moody-banks-vanish.md  new-birds-worry.md  nine-meteors-smile.md  pretty-crabs-stand.md  proud-glasses-kneel.md  public-ghosts-play.md  red-berries-drop.md  red-states-drive.md  salty-chairs-allow.md  salty-ears-appear.md  silly-clowns-sin.md  silly-humans-hunt.md  silver-teeth-wish.md  sixty-flowers-call.md  sunny-cups-shop.md  swift-crews-look.md  swift-regions-kneel.md  tall-geese-arrive.md  three-bottles-melt.md  three-rules-smell.md  wacky-onions-glow.md  (+2 more)
apps/central/: .env.example  CONTEXT.md  Cargo.toml
apps/central/migrations/: 20260514164355_ethoko_user.sql
apps/central/src/: httpserver.rs  lib.rs  router.rs
apps/central/src/newtypes/: email.rs  handle.rs  mod.rs  password.rs
apps/central/src/routes/: auth.rs  mod.rs
apps/central/src/users/: auth_router.rs  mod.rs  models.rs  notifier.rs  password_hasher.rs  repository.rs  service.rs
apps/central/src/users/handlers/: email_signup.rs  mod.rs
apps/central/src/users/models/: auth_credential.rs  email_signup.rs  mod.rs  user.rs  users_response.rs
apps/central/tests/: healthcheck_test.rs  signup_test.rs
apps/central/tests/common/: mod.rs
(+302 files in other folders)
